--- a/package.json
+++ b/package.json
@@ -14,7 +14,13 @@
   "license": "GPL-3.0",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "cookie-parser": "^1.4.4",
+    "dotenv": "^7.0.0",
     "express": "^4.16.4",
-    "nodemon": "^1.18.10"
+    "express-session": "^1.16.1",
+    "mysql2": "^1.6.5",
+    "nodemon": "^1.18.10",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0"
   }
 }
